5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1595_1017.log
== SUBMITION (2019-03-30 02:03:12) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radinas(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * acos(sin(t1) * sin(t1) + cos(t1) * cos(t2) * cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.193407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 9, in <module>
    g2 = radinas(float(input()))
NameError: name 'radinas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 02:03:41) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radinas(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * (acos(sin(t1) * sin(t1) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d,2))
-- EXECUTION TIME:
0.127396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 9, in <module>
    g2 = radinas(float(input()))
NameError: name 'radinas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 02:03:46) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radinas(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * (acos(sin(t1) * sin(t1) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    g2 = radinas(float(input()))
NameError: name 'radinas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 02:04:09) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radinas(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * (acos(sin(t1) * sin(t1) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    g2 = radinas(float(input()))
NameError: name 'radinas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:57:51) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radinas(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * (acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1-g2)))

print(round(d,2))
-- EXECUTION TIME:
0.14159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 9, in <module>
    g2 = radinas(float(input()))
NameError: name 'radinas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:12:33) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radinas(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * (acos( ( sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1-g2) )  ) )

print(round(d,2))
-- EXECUTION TIME:
0.157294
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 9, in <module>
    g2 = radinas(float(input()))
NameError: name 'radinas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:12:47) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * (acos( ( sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1-g2) )  ) )

print(round(d,2))
-- EXECUTION TIME:
0.193944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 11, in <module>
    d = r * (acos( ( sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1-g2) )  ) )
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:13:53) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R = float(6371.01)
d = r * (acos( ( sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1-g2) )  ) )

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = r * (acos( ( sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1-g2) )  ) )
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:15:20) 
-- CODE:
from math import *
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = float(6371.01)
d = r * (acos( ( sin(t1) * sin(t2)) + (cos(t1) * cos(t2) * cos(g1-g2) )  ) )

print(round(d,2))
-- EXECUTION TIME:
0.151253
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
